--- a/src/App.css
+++ b/src/App.css
@@ -23,9 +23,27 @@ body {
   align-items: center;
 }
 
-.modal-close-button {
+.close-modal {
   margin-bottom: 20px;
   background-color: transparent;
-  border: none;
+  border: 1px solid lightslategray;
+  border-radius: 50%;
+  padding: 3px;
+  font-weight: 600;
   cursor: pointer;
+}
+
+.cart-item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 8px;
+}
+
+.item-img {
+  width: 50px;
+  height: 50px;
+  border: 2px solid lightgray;
+  border-radius: 50%;
+  padding: 5px;
+  margin-right: 10px;
 }
